Add tv-integration branch to Docker build workflow

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -4,9 +4,11 @@ on:
   push:
     branches:
       - main
+      - tv-integration
   pull_request:
     branches:
       - main
+      - tv-integration
   workflow_dispatch:
 
 env:
