--- a/package.json
+++ b/package.json
@@ -7,26 +7,37 @@
     "build": "tsc",
     "start": "node dist/server.js",
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
-    "context:refresh": "node scripts/contextRefresh.js"
+    "context:refresh": "node scripts/contextRefresh.js",
+    "test": "vitest",
+    "test:watch": "vitest --watch",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage"
   },
-  "keywords": ["radarr", "rss", "movies", "indian"],
+  "keywords": [
+    "radarr",
+    "rss",
+    "movies",
+    "indian"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "ejs": "^3.1.9",
-    "better-sqlite3": "^9.2.2",
-    "rss-parser": "^3.13.0",
     "axios": "^1.6.2",
-    "dotenv": "^16.3.1"
+    "better-sqlite3": "^9.2.2",
+    "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "rss-parser": "^3.13.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/ejs": "^3.1.5",
-    "@types/node": "^20.10.5",
     "@types/better-sqlite3": "^7.6.8",
+    "@types/ejs": "^3.1.5",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.10.5",
+    "@vitest/ui": "^4.0.14",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3",
-    "ts-node-dev": "^2.0.0"
+    "vitest": "^4.0.14"
   }
 }
-
