feat(upgrade-logic): treat large size increases as upgrades
- Add sizeOnlyUpgradePercent setting to QualitySettings
- Default size-only upgrade threshold to 25% in DB quality settings
- Update matchingEngine to mark releases as UPGRADE_CANDIDATE when:
  - score delta + size delta meet existing thresholds, OR
  - size increase alone >= sizeOnlyUpgradePercent
- Extend Docker build workflow to run on feat/** branches for CI images

Tests: npm run build && npm test (68 tests passing)

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -6,10 +6,12 @@ on:
       - main
       - tv-integration
       - fix/**
+      - feat/**
   pull_request:
     branches:
       - main
       - tv-integration
+      - feat/**
   workflow_dispatch:
 
 env:
