--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "@types/ejs": "^3.1.5",
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.5",
+    "@types/supertest": "^6.0.3",
     "@vitest/ui": "^4.0.14",
+    "supertest": "^7.1.4",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3",
     "vitest": "^4.0.14"
